# caf-analysis-02-message-behavior

./: ANALYSIS.md  README.md
demo/: CMakeLists.txt  README.md  main.cpp
diagrams/: 01-message-types.excalidraw  02-behavior-matching.excalidraw  03-serialization.excalidraw
